syntax = "proto3";

option csharp_namespace = "BlockchainApp.Web.Shared";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);

  rpc JoinChat(HelloRequest) returns (stream HelloReply);
  rpc Send(HelloReply) returns (AnsRequest);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
  string sender = 2;
}
message AnsRequest{
	
}
